tests/k8s_testcases/network-policy-checks-bad-path/spec_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: general-spec-test-type
  namespace: kube-system
# wrong type
spec:
  - podSelector: {}
  - policyTypes:
    - Ingress
    - Egress
  - ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  - egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
